<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Patient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="states_prompt">Choose a state:</string>

    <string-array name="states_arrays">
        <item></item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>Washington DC</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="title_activity_next">NextActivity</string>
    <string name="title_activity_next_activity2">NextActivity2</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <string name="title_activity_next_activity3">NextActivity3</string>
    <string name="covered">covered</string>
    <string name="self_insured">self_insured</string>
    <string name="secondary">Secondary Insurance</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_next_acitivity4">NextAcitivity4</string>
    <string name="title_activity_next_activity4">NextActivity4</string>
    <string name="ins_holder">blah</string>
    <string name="ClearButton">ClearButton</string>
    <string name="icon">icon</string>
    <string name="btn_Confirm">Next</string>
    <string name="patient_details">Patient Details</string>
    <string name="firstname">*First Name</string>
    <string name="middle">Middle Name</string>
    <string name="lastname">*Last Name</string>
    <string name="gender">*Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">*Birthday</string>
    <string name="marialstatus">*Marial Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="socialsecurity">*Social Security</string>
    <string name="address">*Address</string>
    <string name="city">*City</string>
    <string name="state">*State</string>
    <string name="zipcode">*Zip Code</string>
    <string name="email">Email</string>
    <string name="phone">*Phone</string>
    <string name="next2">Next</string>
    <string name="employmenthistory">Employment History</string>
    <string name="employercompany">*Employer</string>
    <string name="employerphone">*Phone</string>
    <string name="occupation">*Occupation</string>
    <string name="emaddress">*Address</string>
    <string name="emcontact">Emergency Contact</string>
    <string name="contact1">*Contact #1</string>
    <string name="contact2">Contact #2</string>
    <string name="emcon1n">*Name</string>
    <string name="emcon2n">Name</string>
    <string name="emcon1p">*Phone</string>
    <string name="emcon2p">Phone</string>
    <string name="emcon1re">*Relationship with Patient</string>
    <string name="emcon2re">Relationship with Patient</string>
    <string name="next3">Next</string>
    <string name="insurance">Insurance</string>
    <string name="checkcover">Check if covered</string>
    <string name="incomp">*Insurance Company</string>
    <string name="incomp2">*Insurance Company</string>
    <string name="incompn">*Phone Number</string>
    <string name="incompn2">*Phone Number</string>
    <string name="incomppo2">*Policy Number</string>
    <string name="incomppo">*Policy Number</string>
    <string name="incompgr">*Group Number</string>
    <string name="incompgr2">*Group Number</string>
    <string name="selfin">Check if self insured</string>
    <string name="ifyes">If yes,</string>
    <string name="pohns">*Policy Holder\'s Name</string>
    <string name="pohre">*Relationship</string>
    <string name="next4">Next</string>
    <string name="ok">OK</string>
    <string name="medicalhistory">Medical History</string>
    <string name="mhquestion">Which of the following conditions have you been treated for in the past? (Please check all that apply)</string>
    <string name="heartdisease">Heart Disease</string>
    <string name="asthma">Asthma</string>
    <string name="high_cholesterol">High Cholesterol</string>
    <string name="std">Sexually Transmitted Disease</string>
    <string name="cancer">Cancer</string>
    <string name="high_blood_pressure">High Blood Pressure</string>
    <string name="diabetes">Diabetes</string>
    <string name="arthritis">Arthritis</string>
    <string name="anemia">Anemia</string>
    <string name="seizures">Seizures</string>
    <string name="hearingloss">Hearing loss</string>
    <string name="kidneystones">Kidney stones</string>
    <string name="ulcers">Ulcers</string>
    <string name="prostate_problems">Prostate problems</string>
    <string name="stroke">Stroke</string>
    <string name="corrective_lenses">Corrective Lenses</string>
    <string name="ear_problems">Ear problems</string>
    <string name="neurological_problem">Neurological problem</string>
    <string name="depression">Depression</string>
    <string name="title1">Patient Details</string>
    <string name="clear1">Clear</string>
    <string name="clear6">Clear</string>
    <string name="allergy_title">Allergy</string>
    <string name="medication_allergies">Medication Allergies</string>
    <string name="no_known_allergies">No known allergies</string>
    <string name="allergy_yes">Yes</string>
    <string name="allergy1">Allergy</string>
    <string name="allergy2">Allergy</string>
    <string name="allergy3">Allergy</string>
    <string name="allergy4">Allergy</string>
    <string name="allergy5">Allergy</string>
    <string name="reaction1">Reaction</string>
    <string name="reaction2">Reaction</string>
    <string name="reaction3">Reaction</string>
    <string name="reaction4">Reaction</string>
    <string name="reaction5">Reaction</string>
    <string name="allergy_text1" />
    <string name="allergy_text2" />
    <string name="allergy_text3" />
    <string name="allergy_text4" />
    <string name="allergy_text5" />
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_next_activity6">NextActivity6</string>
    <string name="next6">Next</string>
    <string name="date_picker">Date Picker</string>
    <string name="states">States</string>
    <string name="next7">Next</string>
    <string name="edit_section">Edit</string>
    <string name="btnStart">Start</string>
    <!-- <item android:id="@+id/item1" android:layout_height="wrap_content" android:layout_width="wrap_content"/> -->
    <string name="add_allergy">+</string>
    <string name="delete_allergy">-</string>
    <string name="mssg2user">* Marks Required Fields</string>
    <string name="title_activity_test_clear">TestClearActivity</string>
    <string name="httpResponseText"></string>
    <string name="clearFieldMenuItem">Clear All Fields</string>
    <string name="title_activity_thank_you">Thank You</string>
    <string name="thanks_message">Thank you for submitting your health information!</string>
    <string name="continue_to_start">Tap to start a new application</string>
    <string name="title_activity_update_info">Update Health Info</string>
    <string name="verifyButtonText">Verify</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_doctor_register">DoctorRegister</string>

</resources>
