<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="460dp"
    tools:context=".UpdateInfo"
    android:focusableInTouchMode="true" >

    <!-- First Name Text box -->
    
    <EditText
        android:id="@+id/idTextField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    
    <!-- Last Name Text box -->

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/idTextField"
        android:layout_alignBottom="@+id/idTextField"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/slideUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTextField"
        android:layout_alignRight="@+id/idTextField"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="42dp"
        android:text="@string/firstname" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/slideUpTextView"
        android:layout_alignBottom="@+id/slideUpTextView"
        android:layout_alignLeft="@+id/passwordTextField"
        android:layout_marginLeft="44dp"
        android:text="@string/lastname" />

    <!-- Social Security Text box -->
    
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTextField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="@integer/nine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTextField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/socialsecurity" />

    <EditText
        android:id="@+id/reg_phoneNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_email"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/imageButton_dateVerify"
        android:ems="10"
        android:inputType="date"
        android:hint="mm/dd/yyyy"
        android:maxLength="@integer/ten" />

    <ImageButton
        android:id="@+id/imageButton_dateVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reg_phoneNumber"
        android:layout_alignRight="@+id/reg_email"
        android:layout_alignTop="@+id/reg_phoneNumber"
        android:background="#80000000"
        android:contentDescription="@string/date_picker"
        android:src="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/dob" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_phoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/verifyButtonText" />

</RelativeLayout>
</ScrollView>