<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:contentDescription="@string/icon"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <SlidingDrawer
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:allowSingleTap="true"
        android:animateOnClick="true"
        android:background="@color/white"
        android:content="@+id/content"
        android:focusable="true"
        android:handle="@+id/slideUpTextView" >

        <TextView
            android:id="@+id/slideUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/up_button"
            android:gravity="center"
            android:text="Slide up to learn more about HIS" />

        <LinearLayout
            android:id="@id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/HIS_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Information about the app \n What it does \n How to contact us \n and more" />
        </LinearLayout>
    </SlidingDrawer>

    <!-- Next Button | Ace -->

    <Button
        android:id="@+id/btn_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:layout_toLeftOf="@+id/update_Btn"
        android:layout_toRightOf="@+id/textView2"
        android:contentDescription="@string/btn_Confirm"
        android:text="@string/btnStart" />

    <!-- Logo Image | Ace -->

    <ImageView
        android:id="@+id/ImageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_Confirm"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ImageView_logo"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar1"
        android:gravity="center" />

    <Button
        android:id="@+id/update_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/drawer"
        android:layout_below="@+id/ImageView_logo"
        android:layout_marginRight="8dp"
        android:text="Update Application" />

</RelativeLayout>